# pw-insight

./: .gitignore  LICENSE  README.md  pyproject.toml
.github/ISSUE_TEMPLATE/: bug_report.yml  feature_request.yml
.github/workflows/: ci.yml  publish.yml
pw_insight/: categoriser.py  cli.py  explainer.py  git_blame.py  html_report_parser.py  parser.py  reporter.py
