[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "pw-insight"
version = "1.0.0"
description = "Playwright test failure analyser — ownership, plain English reasons, filterable dashboard. No API keys. No internet. Fully local."
readme = "README.md"
license = { text = "MIT" }
requires-python = ">=3.9"
dependencies = []

[project.optional-dependencies]
progress = ["tqdm>=4.60"]

[project.scripts]
pw-insight = "pw_insight.cli:main"

[tool.setuptools.packages.find]
where = ["."]
include = ["pw_insight*"]
