[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "pw-insight"
version = "1.0.0"
description = "Playwright test failure analyser — ownership, plain English reasons, filterable dashboard. No API keys. No internet. Fully local."
readme = "README.md"
license = { file = "LICENSE" }
requires-python = ">=3.9"
dependencies = []
keywords = ["playwright", "testing", "test-reporting", "dashboard", "ci"]
authors = [
  { name = "Vijay Mandavilli", email = "mvijayfromvizag@gmail.com" }
]
classifiers = [
  "Development Status :: 4 - Beta",
  "Environment :: Console",
  "Intended Audience :: Developers",
  "License :: OSI Approved :: MIT License",
  "Programming Language :: Python :: 3",
  "Programming Language :: Python :: 3.9",
  "Programming Language :: Python :: 3.10",
  "Programming Language :: Python :: 3.11",
  "Programming Language :: Python :: 3.12",
  "Topic :: Software Development :: Testing",
  "Topic :: Utilities",
]

[project.optional-dependencies]
progress = ["tqdm>=4.60"]

[project.urls]
Homepage = "https://github.com/mandavillivijay/pw-insight"
Repository = "https://github.com/mandavillivijay/pw-insight"
"Bug Tracker" = "https://github.com/mandavillivijay/pw-insight/issues"

[project.scripts]
pw-insight = "pw_insight.cli:main"

[tool.setuptools.packages.find]
where = ["."]
include = ["pw_insight*"]
